@@ -206,3 +206,46 @@ ieigenval <- function(x) {
         
     return(as.matrix(as.numeric(retval)))
 }
+
+omxSelectRows <- function(x, selector) {
+    if(nrow(selector) != 1) selector <- t(selector)
+    if(nrow(selector) != 1) {
+        stop("Selector must have a single row or a single column")
+    }
+    if(nrow(x) != ncol(selector)) {
+        stop("selector must have one column for each row of x")
+    }
+    retval = x[selector != 0,]
+    
+    if(is.vector(retval)) {                 # One remaining row = vector = column
+        retval = t(as.matrix(retval))      # so we'll need to transpose it
+    }
+    
+    return(retval)
+}
+
+omxSelectCols <- function(x, selector) {
+    if(nrow(selector) != 1) selector <- t(selector)
+    if(nrow(selector) != 1) {
+        stop("Selector must have a single row or a single column")
+    }
+    if(ncol(x) != ncol(selector)) {
+        stop("selector must have one column for each column of x")
+    }
+    
+    return(as.matrix(x[,selector != 0]))
+    
+}
+
+omxSelectRowsAndCols <- function(x, selector) {
+    if(nrow(selector) != 1) selector <- t(selector)
+    if(nrow(selector) != 1) {
+        stop("Selector must have a single row or a single column")
+    }
+    if(nrow(x) != ncol(selector) || ncol(x) != ncol(selector)) {
+        stop("selector must have one column for each row and column of x")
+    }
+    
+    return(as.matrix(x[selector != 0,selector != 0]))
+    
+}
