@@ -27,6 +27,8 @@ H <- mxMatrix(values = c(-9.0912244, 11.1561436, 12.9500773, -0.8400564, -5.2556
 J <- mxMatrix("Full", values=rbind(c(1, 0, 0), c(1, 0, 0)), free=F, name="J")
 L <- mxMatrix("Full", nrow=1, ncol=3, values=c(0,0,-Inf), free=F, name="L")
 M <- mxMatrix("Full", nrow=1, ncol=3, values=c(0,0,0), free=F, name="M")
+N <- mxMatrix("Full", nrow=1, ncol=3, values=c(0,1,0), free=F, name="N")
+O <- mxMatrix("Full", nrow=3, ncol=3, values=1:9, free=F, name="O")
 U <- mxMatrix("Full", nrow=1, ncol=3, values=c(Inf,Inf,Inf), free=F, name="U")
 V <- mxMatrix("Stand", nrow=3, ncol=3, values=c(.5, .5, .5), free=F, name="V")
 Z <- mxMatrix("Full", nrow=3, ncol=3, name='Z', values = c(6, 3, -1, 0, 8, 5, 0, 3, -1111))
@@ -34,7 +36,7 @@ dimnames(A) <- list(letters[1:5], letters[22:26])
 dimnames(B) <- dimnames(A)
 dimnames(C) <- list(letters[1:6], letters[22:26])
 
-model <- mxModel(A, B, C, D, E, G, H, V, M, L, U, Z, name = 'model')
+model <- mxModel(A, B, C, D, E, G, H, V, M, N, O, L, U, Z, name = 'model')
 zeta <- 'z'
 alpha <- 'a'
 two <- 2
@@ -166,6 +168,28 @@ model <- mxModel(model, mxAlgebra(ieigenval(H), name='test43b'))
 model <- mxModel(model, mxAlgebra(omxNot(Z), name ='test44a'))
 model <- mxModel(model, mxAlgebra(omxNot(omxNot(Z)), name = 'test44b'))
 model <- mxModel(model, mxAlgebra(omxNot(t(Z)), name = 'test44c'))
+model <- mxModel(model, mxAlgebra(omxSelectRows(O, N), name='test45'))
+model <- mxModel(model, mxAlgebra(omxSelectCols(O, N), name='test46'))
+model <- mxModel(model, mxAlgebra(omxSelectRowsAndCols(O, N), name='test47'))
+model <- mxModel(model, mxAlgebra(omxSelectRows(O,omxNot(N)), name='test45b'))
+model <- mxModel(model, mxAlgebra(omxSelectCols(O,omxNot(N)), name='test46b'))
+model <- mxModel(model, mxAlgebra(omxSelectRowsAndCols(O,omxNot(N)), name='test47b'))
+model <- mxModel(model, mxAlgebra(omxSelectRows(O,N%x%5), name='test45c'))
+model <- mxModel(model, mxAlgebra(omxSelectCols(O,N%x%5), name='test46c'))
+model <- mxModel(model, mxAlgebra(omxSelectRowsAndCols(O,N%x%5), name='test47c'))
+model <- mxModel(model, mxAlgebra(omxSelectRows(O,t(N)), name='test45d'))
+model <- mxModel(model, mxAlgebra(omxSelectCols(O,t(N)), name='test46d'))
+model <- mxModel(model, mxAlgebra(omxSelectRowsAndCols(O,t(N)), name='test47d'))
+model <- mxModel(model, mxAlgebra(omxSelectRows(O,omxNot(t(N))), name='test45e'))
+model <- mxModel(model, mxAlgebra(omxSelectCols(O,omxNot(t(N))), name='test46e'))
+model <- mxModel(model, mxAlgebra(omxSelectRowsAndCols(O,omxNot(t(N))), name='test47e'))
+model <- mxModel(model, mxAlgebra(omxSelectRows(O,t(N)%x%5), name='test45f'))
+model <- mxModel(model, mxAlgebra(omxSelectCols(O,t(N)%x%5), name='test46f'))
+model <- mxModel(model, mxAlgebra(omxSelectRowsAndCols(O,t(N)%x%5), name='test47f'))
+model <- mxModel(model, mxAlgebra(omxSelectRows(O[,1:2],N%x%5),    name='test45g'))
+model <- mxModel(model, mxAlgebra(omxSelectCols(O[1:2,],N%x%5),    name='test46g'))
+model <- mxModel(model, mxAlgebra(omxSelectRows(O[,1:2],t(N)%x%5), name='test45h'))
+model <- mxModel(model, mxAlgebra(omxSelectCols(O[1:2,],t(N)%x%5), name='test46h'))
 model <- mxRun(model)
 
 # Check passing tests
@@ -294,3 +318,25 @@ omxCheckCloseEnough(model[['test43b']]@result, as.matrix(mxEval(Im(eigen(H)$valu
 omxCheckCloseEnough(model[['test44a']]@result, mxEval(omxNot(Z), model), 0.001)
 omxCheckCloseEnough(model[['test44b']]@result, mxEval(omxNot(omxNot(Z)), model), 0.001)
 omxCheckCloseEnough(model[['test44c']]@result, mxEval(omxNot(t(Z)), model), 0.001)
+omxCheckCloseEnough(model[['test45']]@result, mxEval(omxSelectRows(O,N), model), 0.001)
+omxCheckCloseEnough(model[['test46']]@result, mxEval(omxSelectCols(O,N), model), 0.001)
+omxCheckCloseEnough(model[['test47']]@result, mxEval(omxSelectRowsAndCols(O,N), model), 0.001)
+omxCheckCloseEnough(model[['test45b']]@result, mxEval(omxSelectRows(O,omxNot(N)), model), 0.001)
+omxCheckCloseEnough(model[['test46b']]@result, mxEval(omxSelectCols(O,omxNot(N)), model), 0.001)
+omxCheckCloseEnough(model[['test47b']]@result, mxEval(omxSelectRowsAndCols(O,omxNot(N)), model), 0.001)
+omxCheckCloseEnough(model[['test45c']]@result, mxEval(omxSelectRows(O,N%x%5), model), 0.001)
+omxCheckCloseEnough(model[['test46c']]@result, mxEval(omxSelectCols(O,N%x%5), model), 0.001)
+omxCheckCloseEnough(model[['test47c']]@result, mxEval(omxSelectRowsAndCols(O,N%x%5), model), 0.001)
+omxCheckCloseEnough(model[['test45d']]@result, mxEval(omxSelectRows(O,t(N)), model), 0.001)
+omxCheckCloseEnough(model[['test46d']]@result, mxEval(omxSelectCols(O,t(N)), model), 0.001)
+omxCheckCloseEnough(model[['test47d']]@result, mxEval(omxSelectRowsAndCols(O,t(N)), model), 0.001)
+omxCheckCloseEnough(model[['test45e']]@result, mxEval(omxSelectRows(O,omxNot(t(N))), model), 0.001)
+omxCheckCloseEnough(model[['test46e']]@result, mxEval(omxSelectCols(O,omxNot(t(N))), model), 0.001)
+omxCheckCloseEnough(model[['test47e']]@result, mxEval(omxSelectRowsAndCols(O,omxNot(t(N))), model), 0.001)
+omxCheckCloseEnough(model[['test45f']]@result, mxEval(omxSelectRows(O,t(N)%x%5), model), 0.001)
+omxCheckCloseEnough(model[['test46f']]@result, mxEval(omxSelectCols(O,t(N)%x%5), model), 0.001)
+omxCheckCloseEnough(model[['test47f']]@result, mxEval(omxSelectRowsAndCols(O,t(N)%x%5), model), 0.001)
+omxCheckCloseEnough(model[['test45g']]@result, mxEval(omxSelectRows(O[,1:2],N%x%5), model), 0.001)
+omxCheckCloseEnough(model[['test46g']]@result, mxEval(omxSelectCols(O[1:2,],N%x%5), model), 0.001)
+omxCheckCloseEnough(model[['test45h']]@result, mxEval(omxSelectRows(O[,1:2],t(N)%x%5), model), 0.001)
+omxCheckCloseEnough(model[['test46h']]@result, mxEval(omxSelectCols(O[1:2,],t(N)%x%5), model), 0.001)
