@@ -9,6 +9,8 @@ trunk
 * added 'lbound' and 'ubound' columns to summary() output of free parameters
 * added asterisks to the 'lbound' and 'ubound' columns when feasibility tolerance is met
 * added "omxNot" operator to the set of available mxAlgebra() operators
+* added "omxSelectRows", "omxSelectCols", and "omxSelectRowsAndCols" as mxAlgebra operators()
+* updated interface of mxRowObjective
 
 Pre-Release 999.0.0-1527 (January 6, 2011)
 ==========================================
